--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "types": ["react", "react-dom"],
-    "baseUrl": "src",
-    "paths": {
-      "@/*": ["*"]
-    }
+    // "baseUrl": "src",
+    // "paths": {
+    //   "@/*": ["*"]
+    // }
   },
   "include": [
     "src"
