--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "framer-motion": "^12.23.14",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-paginate": "^8.3.0",
