--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.1.0",
     "react-toastify": "^11.0.5",
     "typescript": "^4.9.5",
     "use-debounce": "^10.0.6",
