--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-dom": "^19.1.1",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.7.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
     "typescript": "^4.9.5",
     "use-debounce": "^10.0.6",
