--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-select": "^5.10.2",
     "react-switch": "^7.1.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.5.0",
     "typescript": "^4.9.5",
     "use-debounce": "^10.0.6",
     "web-vitals": "^2.1.4",
