--- a/package.json
+++ b/package.json
@@ -62,9 +62,11 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@types/react-calendar": "^4.1.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.1.17"
   }
 }
